<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>TechnicalTask</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>TechnicalTask</name>
  <url>http://maven.apache.org</url>

  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>
      <aspectj.version>1.9.6</aspectj.version>
      <compiler.version>1.8</compiler.version>
      <tag>@R001</tag>
  </properties>

  <dependencies>
      <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
      <dependency>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-java</artifactId>
          <version>4.4.0</version>
      </dependency>

      <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
      <dependency>
          <groupId>io.github.bonigarcia</groupId>
          <artifactId>webdrivermanager</artifactId>
          <version>5.3.1</version>
      </dependency>

      <!-- https://mvnrepository.com/artifact/log4j/log4j -->
      <dependency>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
          <version>1.2.17</version>
      </dependency>

      <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
      <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
          <version>3.13.2</version>
      </dependency>

      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.13</version>
          <scope>compile</scope>
      </dependency>

      <dependency>
          <groupId>io.qameta.allure</groupId>
          <artifactId>allure-junit4</artifactId>
          <version>2.8.1</version>
      </dependency>
  </dependencies>
    <profiles>
        <!--Allure -->
        <profile>
            <id>regularTests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <property>
                    <name>profile</name>
                    <value>regularTests</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M5</version>
                        <configuration>
                            <parallel>all</parallel>
                            <argLine>-Xmx512m</argLine>
                            <argLine>-XX:MaxPermSize=256m</argLine>
                            <threadCount>3</threadCount>
                            <!-- <parallel>methods</parallel>-->
                            <!--              <parallel>classes</parallel>-->
                            <testFailureIgnore>true</testFailureIgnore>
                            <rerunFailingTestsCount>0</rerunFailingTestsCount>
                            <argLine>
                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                            </argLine>
                            <properties>
                                <property>
                                    <name>listener</name>
                                    <value>io.qameta.allure.junit4.AllureJunit4</value>
                                </property>
                            </properties>
                            <systemProperties>
                                <property>
                                    <name>allure.results.directory</name>
                                    <value>${project.build.directory}/allure-results</value>
                                </property>
                                <property>
                                    <name>allure.link.issue.pattern</name>
                                    <value>https://example.org/issue/{}</value>
                                </property>
                            </systemProperties>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.aspectj</groupId>
                                <artifactId>aspectjweaver</artifactId>
                                <version>${aspectj.version}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>cucumberTests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
                <property>
                    <name>profile</name>
                    <value>cucumberTests</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0-M5</version>
                        <configuration>
                            <forkCount>5</forkCount>
                            <reuseForks>true</reuseForks>
                            <parallel>all</parallel>
                            <argLine>-Xmx512m</argLine>
                            <argLine>-XX:MaxPermSize=256m</argLine>
                            <threadCount>1</threadCount>
                            <useUnlimitedThreads>true</useUnlimitedThreads>
                            <testFailureIgnore>true</testFailureIgnore>
                            <includes>
                                <include>**/Parallel*IT.class</include>
                            </includes>
                            <testFailureIgnore>true</testFailureIgnore>
                            <argLine>
                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                                -Dcucumber.options="--plugin ru.yandex.qatools.allure.cucumberjvm.AllureReporter"
                            </argLine>
                            <systemProperties>
                                <property>
                                    <name>allure.results.directory</name>
                                    <value>${project.build.directory}/allure-results</value>
                                </property>
                                <property>
                                    <name>allure.link.issue.pattern</name>
                                    <value>https://example.org/issue/{}</value>
                                </property>
                            </systemProperties>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.aspectj</groupId>
                                <artifactId>aspectjweaver</artifactId>
                                <version>${aspectj.version}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>

        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/java/resources</directory>
            </resource>
            <resource>
                <directory>src</directory>
            </resource>
            <resource>
                <directory>src/test/resources</directory>
            </resource>
        </resources>

    </build>
</project>
